<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true"
        tools:context=".feature.ui.signup.SignupActivity">

        <co.alexdev.winy.feature.util.CustomEditText
            android:id="@+id/et_firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_firstname"
            app:layout_constraintBottom_toTopOf="@+id/et_lastname"
            app:layout_constraintEnd_toEndOf="@+id/et_lastname"
            app:layout_constraintStart_toStartOf="@+id/et_lastname"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <co.alexdev.winy.feature.util.CustomEditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/default_content_margin"
            android:hint="@string/hint_lastname"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_firstname" />

        <co.alexdev.winy.feature.util.CustomEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:layout_marginEnd="8dp"
            android:hint="@string/hint_email_type2"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_lastname" />

        <co.alexdev.winy.feature.util.CustomEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_content_margin"
            android:layout_marginEnd="@dimen/default_content_margin"
            android:hint="@string/hint_password_type2"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/et_birthdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <EditText
            android:id="@+id/et_birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/hint_birthdate"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/btn_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/btn_signup"
            style="@style/ButtonCornerRadiusTheme"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_signup_height"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_birthdate"
            app:layout_constraintStart_toStartOf="@+id/et_birthdate"
            app:layout_constraintTop_toBottomOf="@+id/et_birthdate" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/ic_wine_width"
            android:layout_height="@dimen/ic_wine_height"
            android:layout_marginStart="@dimen/default_content_margin"
            android:layout_marginTop="@dimen/default_content_margin"
            android:layout_marginEnd="@dimen/default_content_margin"
            android:layout_marginBottom="@dimen/default_content_margin"
            android:rotation="20"
            app:layout_constraintBottom_toTopOf="@+id/et_firstname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:srcCompat="@drawable/ic_wine" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>