<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.ui.product.settings.SettingsFragment">


    <Button
        android:id="@+id/btn_account"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_content_margin"
        android:layout_marginTop="@dimen/default_content_margin"
        android:background="@drawable/round_button_ripple"
        android:elevation="@dimen/button_elevation"
        android:text="@string/account"
        app:layout_constraintBottom_toTopOf="@+id/btn_about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_content_margin"
        android:layout_marginTop="@dimen/default_content_margin"
        android:background="@drawable/round_button_ripple"
        android:elevation="@dimen/button_elevation"
        android:text="@string/help"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_about" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_content_margin"
        android:layout_marginTop="@dimen/default_content_margin"
        android:background="@drawable/round_button_ripple"
        android:elevation="@dimen/button_elevation"
        android:text="@string/about"
        app:layout_constraintBottom_toTopOf="@+id/btn_help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_account" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="@dimen/menu_button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_content_margin"
        android:layout_marginTop="@dimen/default_content_margin"
        android:background="@drawable/round_button_ripple"
        android:elevation="@dimen/button_elevation"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_help" />
</androidx.constraintlayout.widget.ConstraintLayout>