<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="co.alexdev.winy.feature.ui.login.uimodel.ActivityLoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionGroup="true"
        tools:context=".feature.ui.signup.SignupActivity">

        <co.alexdev.winy.feature.util.custom.CustomEditText
            android:id="@+id/et_firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_content_margin"
            android:hint="@string/hint_firstname"
            android:text="@={viewModel.userInformation.firstname}"
            app:layout_constraintBottom_toTopOf="@+id/et_lastname"
            app:layout_constraintEnd_toEndOf="@+id/et_lastname"
            app:layout_constraintStart_toStartOf="@+id/et_lastname"
            app:layout_constraintTop_toTopOf="parent" />

        <co.alexdev.winy.feature.util.custom.CustomEditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_content_margin"
            android:layout_marginEnd="@dimen/default_content_margin"
            android:hint="@string/hint_lastname"
            android:text="@={viewModel.userInformation.lastname}"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_firstname" />

        <co.alexdev.winy.feature.util.custom.CustomEmailEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_content_margin"
            android:layout_marginEnd="@dimen/default_content_margin"
            android:hint="@string/hint_email_type2"
            android:text="@={viewModel.userCredential.email}"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_lastname" />

        <co.alexdev.winy.feature.util.custom.CustomEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_content_margin"
            android:layout_marginEnd="@dimen/default_content_margin"
            android:layout_marginBottom="@dimen/default_content_margin"
            android:hint="@string/hint_password_type2"
            android:inputType="textPassword"
            android:text="@={viewModel.userCredential.password}"
            app:layout_constraintBottom_toTopOf="@+id/btn_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <Button
            android:id="@+id/btn_signup"
            style="@style/ButtonCornerRadiusTheme"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/default_content_margin"
            android:layout_marginEnd="@dimen/default_content_margin"
            android:layout_marginBottom="@dimen/default_content_margin"
            android:onClick="@{() -> viewModel.signupUser()}"
            android:text="@string/signup"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>